# misc

./: LICENSE-MIT
.config/: .git-commit-template  git-local-config.sh
rust/: .clippy.toml  .gitignore  .rustfmt.toml  Cargo.toml
rust/hello_world/: Cargo.toml
rust/penguin_data/: Cargo.toml
rust/penguin_data/src/: main.rs
